# qxg_os

./: Cargo.toml  run.sh  x86_64-blog_os.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
