[package]
name = "qxg_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"

[dependencies]
# 为了让内核支持物理内存到虚拟内存的地址映射，使用map_physical_memory,内核就可以直接访问物理地址，这样在进行页表翻译的时候用的上。
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false